src/objects/APTS_AgreementTotalVolumeObligation__c.object
<CustomObject>
    <fields>
        <fullName>APTS_Action__c</fullName>
        <description>The action to be taken if volume obligation is not met. The list of values is Renegotiate Contract, Paid Service Fee and Invoice Customer</description>
        <label>Action</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Renegotiate Contract</fullName>
                </value>
                <value>
                    <fullName>Paid Service Fee</fullName>
                </value>
                <value>
                    <fullName>Invoice Customer</fullName>
                </value>
                <value>
                    <fullName>Internal Check</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>APTS_Agreement_Language__c</fullName>
        <formula>TEXT(APTS_Agreement__r.APTS_Language__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Agreement Language</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_Agreement__c</fullName>
        <label>Agreement</label>
        <referenceTo>Apttus__APTS_Agreement__c</referenceTo>
        <relationshipName>Agreement_Total_Volume_Obligations</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>APTS_AverageListPriceCostPrice__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Average List Price &amp; Cost Price</label>
        <referenceTo>APTS_AverageListPriceCostPrice__c</referenceTo>
        <relationshipLabel>Volume Assumption Obligation</relationshipLabel>
        <relationshipName>Volume_Assumption_Obligation_del</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>APTS_Average_Cost_Price__c</fullName>
        <formula>APTS_AverageListPriceCostPrice__r.APTS_ALPCP_IngCost__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Average Cost Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>APTS_Average_Dosage__c</fullName>
        <label>Average Dosage</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>APTS_Average_Price__c</fullName>
        <formula>CASE(TEXT(APTS_Agreement__r.APTS_Preferred_way_of_ingredient_deliver__c),
&apos;Routesales&apos;, APTS_AverageListPriceCostPrice__r.APTS_ALPCP_Routesales__c,
&apos;LSP&apos;, APTS_AverageListPriceCostPrice__r.APTS_ALPCP_VAP__c,
&apos;Indirect channel&apos;, APTS_AverageListPriceCostPrice__r.APTS_ALPCP_GIP__c,
null)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Average Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>APTS_CategoryName__c</fullName>
        <label>Category Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_Category_Discount__c</fullName>
        <label>Category Discount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>APTS_Category_Hierarchy__c</fullName>
        <formula>IF( TEXT(APTS_Type__c )=&apos;SubCategory&apos;, APTS_CategoryName__c + &apos;|&apos; +  APTS_SubCategoryName__c, 
IF( TEXT(APTS_Type__c )=&apos;SubSubCategory&apos;, APTS_CategoryName__c + &apos; | &apos; +  APTS_SubCategoryName__c + &apos;|&apos; +  APTS_Value_Name__c ,
IF( TEXT(APTS_Type__c )=&apos;Product&apos;, APTS_CategoryName__c + &apos;|&apos; +  APTS_SubCategoryName__c, &apos;&apos;)))</formula>
        <label>Category Hierarchy</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_Categoryvalue__c</fullName>
        <label>Categoryvalue</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_Close__c</fullName>
        <defaultValue>false</defaultValue>
        <description>When enabled, volume obligation tracking is closed.</description>
        <label>Close</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>APTS_Cost_per_Drink__c</fullName>
        <label>Cost per Drink</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>APTS_Cost_per_KG__c</fullName>
        <label>Cost per KG</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>APTS_Cost_per_Liter__c</fullName>
        <label>Cost per Liter</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>APTS_GrossSale__c</fullName>
        <label>Gross Sales</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>APTS_IncludeSelloutData__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Include Sellout Data</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>APTS_Malus_per_Unit__c</fullName>
        <label>Malus per Unit</label>
        <precision>18</precision>
        <scale>5</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>APTS_Name__c</fullName>
        <label>Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_NetSale__c</fullName>
        <label>Net Sales</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>APTS_Number_of_Drinks_per_year__c</fullName>
        <label>Number of Drinks per year</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>APTS_NumberofDrinks__c</fullName>
        <label>Number of Drinks / Year</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>APTS_Price_per_Drink__c</fullName>
        <label>Price per Drink</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>APTS_Price_per_KG__c</fullName>
        <label>Price per KG</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>APTS_Price_per_Liter__c</fullName>
        <label>Price per Liter</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>APTS_Pricing_Date__c</fullName>
        <formula>APTS_Agreement__r.APTS_PricingDate__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Pricing Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>APTS_Product_Name__c</fullName>
        <label>Product Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_Rebate_Payout__c</fullName>
        <description>Rebate Payout field holds the result of the rebate calculation for each volume assumption/obligation line</description>
        <label>Rebate Payout</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>APTS_Sales_Org__c</fullName>
        <formula>TEXT(APTS_Agreement__r.Apttus_CMConfig__PriceListId__r.APTS_Region__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Sales Org</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_SubCategoryName__c</fullName>
        <label>Sub Category Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_SubCategoryValue__c</fullName>
        <label>Sub Category Value</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_Total_Estimated_Contract_Value__c</fullName>
        <label>Total Estimated Contract Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>APTS_Total_Expected_Cost_Amount__c</fullName>
        <label>Total Expected Cost Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>APTS_Total_Expected_Discount_Amount__c</fullName>
        <label>Total Expected Discount Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>APTS_Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Category</fullName>
                </value>
                <value>
                    <fullName>SubCategory</fullName>
                </value>
                <value>
                    <fullName>Product</fullName>
                </value>
                <value>
                    <fullName>SubSubCategory</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>APTS_Unit_of_Measure_Translated__c</fullName>
        <label>Unit of Measure Translated</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>APTS_Unit_of_Measure__c</fullName>
        <label>Unit of Measure</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>APTS_Unit_of_Measure</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>APTS_Value_Name__c</fullName>
        <label>Value Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_Value__c</fullName>
        <label>Value</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_VolumeAssumption__c</fullName>
        <label>Volume Assumption</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>APTS_VolumeObligationPercentage__c</fullName>
        <label>Volume Obligation Percentage</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>APTS_Volume_Obligation__c</fullName>
        <label>Volume Obligation Quantity</label>
        <precision>18</precision>
        <scale>5</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>APTS_Yearly_Estimated_Potential__c</fullName>
        <formula>APTS_VolumeAssumption__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Yearly Estimated Potential</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>APTS_Yearly_Estimated_Value__c</fullName>
        <formula>APTS_Yearly_Estimated_Potential__c  *  APTS_Average_Price__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Yearly Estimated Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <label>Volume Assumption Obligation</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>Volume_Assumption_Obligation</fullName>
        <columns>NAME</columns>
        <columns>APTS_Type__c</columns>
        <columns>APTS_Value__c</columns>
        <columns>APTS_Unit_of_Measure__c</columns>
        <columns>APTS_Volume_Obligation__c</columns>
        <columns>APTS_Action__c</columns>
        <columns>APTS_Malus_per_Unit__c</columns>
        <columns>APTS_Name__c</columns>
        <filterScope>Everything</filterScope>
        <label>Volume Assumption Obligation</label>
    </listViews>
    <nameField>
        <displayFormat>ATVO-{00000}</displayFormat>
        <label>APTS_AgreementTotalVolumeObligation Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Volume Assumption Obligation</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>